.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconpp__c.object
<CustomObject>
    <description>soconpp__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconpp_socontract__r.rstk__externalid__c&amp; &apos;_&apos; &amp;rstk__soconpp_soprod__r.rstk__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconpp_soprod__r.rstk__soprod_prod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_actgracedays__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the number of days allowed between the time of purchase and when recurring charges start accruing if the device has not yet been activated.</inlineHelpText>
        <label>Activation Grace Period (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_commitqty__c</fullName>
        <inlineHelpText>The quantity committed for purchase during the duration of the given Contract for the Product defined.</inlineHelpText>
        <label>Commitment Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_dfltdiscsrce__c</fullName>
        <inlineHelpText>Default Discount
AGQ=AgPrdQty
AGV=AgPrdVol
AGP=AgPrd
CUP=CusPrd
CUD=CusPrdGrp
CUS=Cus
CC=CusClsPrd
CCC=CusClsPrdGrp
CCL=CusCls</inlineHelpText>
        <label>Default Discount Source</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_discpct__c</fullName>
        <description>Default discount set for this Product on a SO Line added referencing the given Contract. Upon entering the Commitment Quantity, the RS pricing engine determines a discount percent in the same manner as when entering a SO Line, however the resulting discount can be overridden.</description>
        <inlineHelpText>Default discount set for the Product on a SO Line referencing the Contract. Upon entering Commitment Quantity, the RS pricing engine determines a discount percent in the same manner as entering a SO Line, however the resulting discount can be overridden.</inlineHelpText>
        <label>Discount Pct.</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_penaltyamt__c</fullName>
        <inlineHelpText>The amount per unit that the Customer is &quot;penalized&quot; when this Product is purchased after the Purchase by Date.</inlineHelpText>
        <label>Unit Penalty Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_price__c</fullName>
        <inlineHelpText>The Unit Price agreed upon for this Product on the given Contract. Upon entering Commitment Quantity, the RS “pricing engine” determines a &quot;default&quot; price in the same manner as when entering a SO Line, however the resulting price can be overridden.</inlineHelpText>
        <label>Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_pricecalcbase__c</fullName>
        <description>Once the System Calculated Price is derived, it is adjusted by the Calculated Price Discount to arrive at the Calculated Price Basis, which is used to default the Unit Price which can then be overridden on the SO Line.</description>
        <inlineHelpText>Once the System Calculated Price is derived, it is adjusted by the Calculated Price Discount to arrive at the Calculated Price Basis, which is used to default the Unit Price which can then be overridden on the SO Line.</inlineHelpText>
        <label>Calculated Price Basis</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_pricecalcdisc__c</fullName>
        <inlineHelpText>The Calculated Discount percentage applied to this line item.</inlineHelpText>
        <label>Calculated Price Discount</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_pricesrce__c</fullName>
        <inlineHelpText>Prc
AGQ=AgPrdQty
AGV=AgPrdVol
AGP=AgPrd
PCQ=CusPrdQty
PCP=CusPrd
PDQ=DtEffPrdQty
PDP=DtEffPrd
PRQ=PrdQty
PRP=Prd
ROL=Rlup
Dsc
AGQ=AgPrdQty
AGV=AgPrdVol
AGP=AgPrd
CUP=CusPrd
CUD=CusPrdGrp
CUS=Cus
CC=CusClsPrd
CCC=CusClsPrdGrp
CCL=CusCls</inlineHelpText>
        <label>Price Source</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_purchbydate__c</fullName>
        <inlineHelpText>The agreed upon date by which this Product will be purchased without invoking any penalties.</inlineHelpText>
        <label>Purchase by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_qtysold__c</fullName>
        <inlineHelpText>Total quantity purchased of this Product against the given Contract.</inlineHelpText>
        <label>Quantity Purchased</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_rcprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required whenever the Rootstock Product Master has Associated Recurring Charges defined for it.</description>
        <inlineHelpText>Required when the RS Product has Associated Recurring Charges defined for it. A Product may have multiple Associated Recurring Charges, but this record only allows 1. If the Product only carries 1, it will default to it, otherwise you need to select.</inlineHelpText>
        <label>Associated Recurring Charge Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Products for Purchases (Associated Recurring Charge Product)</relationshipLabel>
        <relationshipName>soconpps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_salesacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Sales Account (Revenue Account) debited when a SO Line for this Product against the given Contract ships. Note that a distribution can be defined when billings need to be distributed across multiple accounts (see Sales Account Distribution).</description>
        <inlineHelpText>The Sales Account (Revenue Account) debited when a SO Line for this Product against the given Contract ships. Note that a distribution can be defined when billings need to be distributed across multiple accounts (see Sales Account Distribution).</inlineHelpText>
        <label>Revenue Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Contract Products for Purchases</relationshipLabel>
        <relationshipName>soconpps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_socontract__c</fullName>
        <inlineHelpText>The Contract ID of the Contract for which Products for Purchase are being added.</inlineHelpText>
        <label>Sales Contract</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Products for Purchases</relationshipLabel>
        <relationshipName>soconpps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_soprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Products to be purchased against the given SO Contract.</inlineHelpText>
        <label>Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Products for Purchases</relationshipLabel>
        <relationshipName>soconpps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_sowarrtype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Warranty Type, defaulted from the Product record or SO Control record (if not set for Product) that will be used on the Warranty record once the Product ships.</inlineHelpText>
        <label>Warranty Type</label>
        <referenceTo>rstk__sowarrtype__c</referenceTo>
        <relationshipLabel>Contract Products for Purchases</relationshipLabel>
        <relationshipName>soconpps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_sysprice__c</fullName>
        <inlineHelpText>System Calculated Price for this line. 

See Price Source for how both price and price discount was derived. 

Positions 1-3 denotes price source. 
Positions 4-6 denotes discount source.</inlineHelpText>
        <label>System Calculated Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_taxamount__c</fullName>
        <inlineHelpText>The calculated Tax Amount based on the Product&apos;s price and the Tax Rate defined</inlineHelpText>
        <label>Tax Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconpp_taxrate__c</fullName>
        <inlineHelpText>When the Product for Purchase is taxable, this is the Tax Rate defined to be used (set from the Contract header)</inlineHelpText>
        <label>Tax Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Products for Purchase</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__details</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconpp_actgracedays__c</columns>
        <columns>rstk__soconpp_commitqty__c</columns>
        <columns>rstk__soconpp_discpct__c</columns>
        <columns>rstk__soconpp_soprod__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstk__soconpp_sysprice__c</columns>
        <columns>rstk__soconpp_pricesrce__c</columns>
        <columns>rstk__soconpp_dfltdiscsrce__c</columns>
        <columns>rstk__soconpp_pricecalcbase__c</columns>
        <columns>rstk__soconpp_pricecalcdisc__c</columns>
        <filterScope>Everything</filterScope>
        <label>details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Products for Purchase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Products for Purchases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Activation_Grace_Period_Days</fullName>
        <active>true</active>
        <description>Activation Grace Period (Days) cannot be blank and should not be less than zero.</description>
        <errorConditionFormula>ISBLANK(rstk__soconpp_actgracedays__c) || rstk__soconpp_actgracedays__c  &lt; 0</errorConditionFormula>
        <errorMessage>Activation Grace Period (Days) cannot be blank and should not be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Associated_Recurring_Charge_Product</fullName>
        <active>true</active>
        <description>Associated Recurring Charge Product is Required.</description>
        <errorConditionFormula>rstk__soconpp_soprod__r.rstk__formula_reqservice__c &amp;&amp;  ISBLANK( rstk__soconpp_rcprod__c )</errorConditionFormula>
        <errorMessage>Associated Recurring Charge Product is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Commitment_Quantity</fullName>
        <active>true</active>
        <description>Commitment Quantity is required , must be greater than zero also should not be less than Quantity Purchased.</description>
        <errorConditionFormula>ISBLANK(rstk__soconpp_commitqty__c) || rstk__soconpp_commitqty__c  &lt;= 0 ||  rstk__soconpp_commitqty__c  &lt; rstk__soconpp_qtysold__c</errorConditionFormula>
        <errorMessage>Error saving Contract Product for Purchase. The required Commitment Quantity cannot be less than the Quantity Purchased.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Discount_Pct</fullName>
        <active>true</active>
        <description>Discount Pct should not be less than zero.</description>
        <errorConditionFormula>rstk__soconpp_discpct__c  &lt; 0 || rstk__soconpp_discpct__c &gt; 100</errorConditionFormula>
        <errorMessage>Discount Percent cannot be less than 0 or greater than 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Product</fullName>
        <active>true</active>
        <description>Product is required and not modifiable.</description>
        <errorConditionFormula>ISBLANK( rstk__soconpp_soprod__c ) || (! ISNEW() &amp;&amp; ISCHANGED(rstk__soconpp_soprod__c) )</errorConditionFormula>
        <errorMessage>Product is required and not modifiable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Product_must_of_type</fullName>
        <active>true</active>
        <description>Product must be of type Stock,Kit,Configured,Service or Miscellaneous</description>
        <errorConditionFormula>NOT( ISPICKVAL(rstk__soconpp_soprod__r.rstk__soprod_prodtype__c, &apos;Stock&apos;)  || ISPICKVAL(rstk__soconpp_soprod__r.rstk__soprod_prodtype__c, &apos;Kit&apos;) ||
ISPICKVAL(rstk__soconpp_soprod__r.rstk__soprod_prodtype__c, &apos;Configured&apos;) || ISPICKVAL(rstk__soconpp_soprod__r.rstk__soprod_prodtype__c, &apos;Service&apos;) || ISPICKVAL(rstk__soconpp_soprod__r.rstk__soprod_prodtype__c, &apos;Miscellaneous&apos;))</errorConditionFormula>
        <errorMessage>Product must be of type Stock,Kit,Configured,Service or Miscellaneous</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Revenue_Account</fullName>
        <active>true</active>
        <description>Revenue Account is required.</description>
        <errorConditionFormula>ISBLANK(rstk__soconpp_salesacct__c)</errorConditionFormula>
        <errorMessage>Revenue Account is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sales_Contract</fullName>
        <active>true</active>
        <description>Sales Contract is required and not modifiable.</description>
        <errorConditionFormula>ISBLANK(rstk__soconpp_socontract__c) || (!ISNEW() &amp;&amp;  ISCHANGED(rstk__soconpp_socontract__c))</errorConditionFormula>
        <errorMessage>Sales Contract is required and not modifiable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Unit_Penalty_Amount</fullName>
        <active>true</active>
        <description>Unit Penalty Amount should not be less than zero.</description>
        <errorConditionFormula>rstk__soconpp_penaltyamt__c  &lt; 0</errorConditionFormula>
        <errorMessage>Unit Penalty Amount should not be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Unit_Price</fullName>
        <active>true</active>
        <description>Unit Price is required and should be greater than or equal to zero.</description>
        <errorConditionFormula>!rstk__soconpp_soprod__r.rstk__soprod_rolluppricefrm__c  &amp;&amp; ( ISBLANK( rstk__soconpp_price__c ) || rstk__soconpp_price__c  &lt; 0 )</errorConditionFormula>
        <errorMessage>Unit Price is required and should be greater than or equal to zero.</errorMessage>
    </validationRules>
</CustomObject>